Trailhead Tracker/src/objects/Trailhead_Tracker__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Since the code parses Trailhead Profile Pages which can change over time, the application uses the following Custom Setting to store certain tags from the Profile Page.</description>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Challenge_Topic__c</fullName>
        <description>#OneStepAtATime</description>
        <label>Challenge Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Post_User_Id__c</fullName>
        <label>Chatter Post User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Chatter_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Chatter Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Http_Request_Timeout__c</fullName>
        <label>Http Request Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trailblazers_Group_Id__c</fullName>
        <label>Trailblazers Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Badges_Begin__c</fullName>
        <description>Stores the tag where the badges data begins.</description>
        <label>Trailhead Badges Begin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Badges_End__c</fullName>
        <description>Stores the tag where the badges data ends.</description>
        <label>Trailhead Badges End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Display_Picture_End__c</fullName>
        <label>Trailhead Display Picture End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Display_Picture_Start__c</fullName>
        <label>Trailhead Display Picture Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Points_Begin__c</fullName>
        <description>Stores the tag where the points data begins.</description>
        <label>Trailhead Points Begin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Points_End__c</fullName>
        <description>Stores the tag where the points data ends.</description>
        <label>Trailhead Points End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Trails_Begin__c</fullName>
        <description>Stores the tag where the trails data begins.</description>
        <label>Trailhead Trails Begin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_Trails_End__c</fullName>
        <description>Stores the tag where the trails data ends.</description>
        <label>Trailhead Trails End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_URL__c</fullName>
        <description>Stores the static part of the Trailhead Profile Page URL</description>
        <label>Trailhead URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_User_Name_Begin__c</fullName>
        <description>Stores the tag where the username data begins.</description>
        <label>Trailhead User Name Begin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_User_Name_End__c</fullName>
        <description>Stores the tag where the username data ends.</description>
        <label>Trailhead User Name End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trailhead Tracker</label>
</CustomObject>